recursion.cons.min.Min.scala.error
Compilation error:
Min:4: error: illegal start of simple pattern
 var t List[Int] = l.tail;
                 ^Min:4: error: type application is not allowed in pattern
 var t List[Int] = l.tail;
       ^Min:4: error: '=' expected but ';' found.
 var t List[Int] = l.tail;
                         ^