recursion.cons.min.Min.scala.code
def min(l:List[Int]): Int = {
	
 var t List[Int] = l.tail;
  
  if(t == Nil)
  {
    return l.head;
  }
  else
  {
  	if(t.head < l.head)
    {
      return min(t);
    }
    else
    {
    	t.tail;
      var a = l.head;
      return(a::t);
      
    }
  }

}